@@ -27,6 +27,7 @@ t3lib_extMgm::addPageTSConfig('
 	mod.web_txtemplavoilaM2.templatePath = templates
 	mod.web_txtemplavoilaM1.enableDeleteIconForLocalElements = 0
 	mod.web_txtemplavoilaM1.enableContentAccessWarning = 1
+	mod.web_txtemplavoilaM1.enableLocalizationLinkForFCEs = 0
 ');
 
  	// Use templavoila instead of the default page module
