@@ -1,3 +1,7 @@
+2010-12-05 Tolleiv Nietsch <nietsch@aoemedia.de> 
+
+	* Fixed bug: #16521: Localize FCEs from the page module (Thanks to Andreas Kiessling)
+
 2010-11-28  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Fixed bug: #16587: small typo - dataprot variable misspelled (Thanks to Andreas Lappe)
@@ -15,7 +19,7 @@
 	* Fixed issue: #11582: No more add icon, if maxitem is reached
 	* Fixed bug: #15927: Remove icon »Create new element« if user has no rights to edit the pages content
 	* Fixed bug: #15925: Buttons in docheader do not respect user rights for pages table
-	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to 	Christian Mueller)
+	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to Christian Mueller)
 	* Fixed issue: #16341: Get rid of the full plugin name
 	* Fixed issue: #16211: a hsc too much 
 
